Worked on binary search algo

--- a/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
@@ -686,6 +686,129 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Question 25: How to rank values in descending order in a Python dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('c', 15), ('a', 10), ('b', 5)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'a': 10, 'b': 5, 'c': 15}\n",
+    "sorted_dict = sorted(my_dict.items(),key=lambda x:x[1], reverse=True) # Also sorting dictionary by values\n",
+    "print(sorted_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ouestion 26: How to Sort a Dictionary by Key in Python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('c', 15), ('b', 5), ('a', 10)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sorted_dict_by_keys = sorted(my_dict.items(), reverse=True)\n",
+    "print(sorted_dict_by_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2: How can I sort a dictionary by values if it contains nested dictionaries?\n",
+    "# Q3: Can I sort a dictionary by values in-place without creating a new dictionary?\n",
+    "# Q4: What is the time complexity of sorting a dictionary by values in Python?\n",
+    "# Q5: Will sorting a dictionary by values change the original dictionary?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "234\n",
+      "32\n",
+      "33\n",
+      "334\n",
+      "61\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_by_key(data,target):\n",
+    "    for key, value in data.items():\n",
+    "        if isinstance(value, dict):\n",
+    "            yield from find_by_key(value, target)\n",
+    "        elif key == target:\n",
+    "            yield value\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    menu = {\n",
+    "  \"PLU\":\"234\",\n",
+    "  \"Salad\":{\n",
+    "    \"salad\":{\n",
+    "      \"ceaser\":{\n",
+    "        \"PLU\":\"32\"\n",
+    "      },\n",
+    "      \"italian\":{\n",
+    "        \"PLU\":\"33\"\n",
+    "      }\n",
+    "    }\n",
+    "  },\n",
+    "  \"Dessert\":{\n",
+    "    \"cookie\":{\n",
+    "      \"PLU\":\"334\",\n",
+    "      \"NAME\":\"cookie \"\n",
+    "    }\n",
+    "  },\n",
+    "  \"Appetizer\":{\n",
+    "    \"extra sauce\":{\n",
+    "      \"PLU\":\"61\",\n",
+    "      \"NAME\":\"extra sauce\"\n",
+    "    }\n",
+    "  }\n",
+    "}\n",
+    "    for x in find_by_key(menu, \"PLU\"):\n",
+    "        print(x)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -709,7 +832,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
