--- a/Python_Code_Snippets/Decorators.ipynb
+++ b/Python_Code_Snippets/Decorators.ipynb
@@ -66,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello from inner function!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def outer_function():\n",
     "    def inner_function():\n",
@@ -89,19 +81,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start\n",
-      "Hello\n",
-      "End\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def outerfunc():\n",
+    "    def inner_func():\n",
+    "        print(\"Inner Function\")\n",
+    "    return inner_func\n",
+    "\n",
+    "inner = outerfunc() # This returns a function object\n",
+    "inner()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def anotherfun(func):\n",
     "    print(\"Start\")\n",
@@ -134,19 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started\n",
-      "Hi\n",
-      "Ended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# fun1(f1) # <function __main__.fun1.<locals>.wrapper()>\n",
     "# fun1(f1)()\n",
@@ -156,19 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started\n",
-      "Hi\n",
-      "Ended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fun1(func):\n",
     "    def wrapper():\n",
@@ -186,19 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started\n",
-      "Ended\n",
-      "Hiiii\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fun1(func):\n",
     "    def wrapper(*args,**kwargs):\n",
@@ -217,19 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Started\n",
-      "100\n",
-      "Ended\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fun1(func):\n",
     "    def wrapper(*args,**kwargs):\n",
@@ -255,17 +212,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Before\n",
-      "run\n",
-      "After\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example 1\n",
     "def before_after(func):\n",
@@ -314,28 +261,6 @@
     "\n",
     "run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "f1\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
