added decorators with args

--- a/Python-Coding-Challenges/DSA/1_BinarySearch/Binary_Search_Exercise_Solution.ipynb
+++ b/Python-Coding-Challenges/DSA/1_BinarySearch/Binary_Search_Exercise_Solution.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "When I try to find number 5 in below list using binary search, it doesn't work and returns me -1 index. Why is that?\n",
     "numbers = [1,4,6,9,10,5,7]\n",
-    "Answer: It is because the list is not sorted! Binary search requires that list has to be sorted"
+    "Answer: It is because the list is not sorted! Binary search requires that list has to be sorted\n"
    ]
   },
   {
