--- a/Python_Code_Snippets/Decorators.ipynb
+++ b/Python_Code_Snippets/Decorators.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " in Python, functions are objects. This means you can assign them to variables, pass them as arguments to other functions, and even return them from other functions. This is because Python treats functions as first-class objects."
+    "in Python, functions are objects. </br>\n",
+    "This means you can assign them to variables, </br>\n",
+    "Pass them as arguments to other functions, </br>\n",
+    "and even return them from other functions. </br>\n",
+    "This is because Python treats functions as first-class objects."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Assigning a function to a variable\n",
+    "- **Assigning a function to a variable\n",
     "python**\n"
    ]
   },
@@ -32,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Passing a function as an argument\n",
+    "- **Passing a function as an argument\n",
     "python**\n"
    ]
   },
@@ -53,14 +57,14 @@
     "def execute_function(func, value):\n",
     "    return func(value)\n",
     "\n",
-    "print(execute_function(greet, \"Bob\"))  # Output: Hello, Bob!\n"
+    "print(execute_function(greet, \"Bob\"))  # Output: Hello, Bob!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Returning a function from another function\n",
+    "- **Returning a function from another function\n",
     "python**\n"
    ]
   },
@@ -233,14 +237,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Function run took: 2.0142109394073486 Seconds\n"
+      "The Function run took: 2.008392333984375 Seconds\n"
      ]
     }
    ],
@@ -261,6 +265,216 @@
     "\n",
     "run()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Explain the concept of decorators in Python, providing examples of their practical use cases.**\n",
+    "\n",
+    "**Key points to cover in your answer:**\n",
+    "\n",
+    "- **Definition:** What are decorators in Python?\n",
+    "- **Syntax:** How are decorators defined and applied?\n",
+    "- **Functionality:** How do decorators modify the behavior of functions?\n",
+    "- **Use cases:** Provide examples of common scenarios where decorators are used, such as:\n",
+    "    - Logging function calls and execution time\n",
+    "    - Restricting function access based on permissions\n",
+    "    - Caching function results to improve performance\n",
+    "    - Implementing error handling and retry mechanisms\n",
+    "    - Timing function execution\n",
+    "- **Implementation considerations:** Discuss potential trade-offs or considerations when using decorators, such as readability and complexity.\n",
+    "\n",
+    "**Additional challenges for advanced learners:**\n",
+    "\n",
+    "- **Decorator chaining:** Explain how multiple decorators can be applied to a single function and the order of execution.\n",
+    "- **Decorators with arguments:** Demonstrate how to create decorators that accept arguments to customize their behavior.\n",
+    "- **Class decorators:** Describe how decorators can be applied to classes and their methods."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calling function add with arguments (1256456, 256848) and keyword arguments {}\n",
+      "Function add returned 1513304\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1513304"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def log_calls(func):\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print(f\"Calling function {func.__name__} with arguments {args} and keyword arguments {kwargs}\")\n",
+    "        result = func(*args,**kwargs)\n",
+    "        print(f\"Function {func.__name__} returned {result}\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "@log_calls\n",
+    "def add(a,b):\n",
+    "    return a + b\n",
+    "\n",
+    "add(1256456,256848)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Decorators with arguments!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def double(func):\n",
+    "    def wrapper(*args,**kwargs):\n",
+    "        return 2* func(*args,**kwargs)\n",
+    "    return wrapper\n",
+    "\n",
+    "@double\n",
+    "def adder(x,y):\n",
+    "    return x+y\n",
+    "\n",
+    "adder(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def multiply(by=None):\n",
+    "    def double_wrapper(func):\n",
+    "        def wrapper(*args,**kwargs):\n",
+    "            return by* func(*args,**kwargs)\n",
+    "        return wrapper\n",
+    "    return double_wrapper\n",
+    "\n",
+    "@multiply(by=3)\n",
+    "def adder(x,y):\n",
+    "    return x+y\n",
+    "\n",
+    "adder(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HELLO WORLD!HELLO WORLD!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def multiply(func):\n",
+    "    def mult_wrapper(*args,**kwargs):\n",
+    "        return 2 * func(*args,**kwargs)\n",
+    "    return mult_wrapper\n",
+    "\n",
+    "def formatting(lowercase=False):\n",
+    "    def formatter_real(func):\n",
+    "        def formatter_wrapper(*args,**kwargs):\n",
+    "            if lowercase:\n",
+    "                return func(*args,**kwargs).lower()\n",
+    "            else:\n",
+    "                return func(*args,**kwargs).upper()\n",
+    "        return formatter_wrapper\n",
+    "    return formatter_real\n",
+    "\n",
+    "@multiply\n",
+    "@formatting(lowercase=False)\n",
+    "def greeting(value=None):\n",
+    "    return f'Hello {value}'\n",
+    "\n",
+    "print(greeting('World!'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "def retry(max_retry):\n",
+    "    def decorator(func):\n",
+    "        def wrapper(*args,**kwargs):\n",
+    "            for attempt in range(max_retry):\n",
+    "                try:\n",
+    "                    return func(*args,**kwargs)\n",
+    "                except Exception as e:\n",
+    "                    print(f\"Attempt {attempt + 1} failed: {e}\")\n",
+    "                    time.sleep(1)\n",
+    "            raise Exception(f\"Failed after {max_retry} attempts\")\n",
+    "        return wrapper\n",
+    "    return decorator\n",
+    "\n",
+    "\n",
+    "@retry(max_retry=3)\n",
+    "def load_data():\n",
+    "    if random.choice([True, False]):\n",
+    "        raise Exception(\"Random failure\")\n",
+    "    print(\"Data loaded successfully\")\n",
+    "\n",
+    "load_data()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
