removed unwanted files

--- a/Python_Essentials/01_basics/03_strings.ipynb
+++ b/Python_Essentials/01_basics/03_strings.ipynb
@@ -150,20 +150,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-1\n",
-      "3\n",
-      "-1\n",
-      "9\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "quote = 'Do small things with great love'\n",
     "\n",
@@ -182,17 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['welcome', 'to', 'the jungle']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "txt = \"welcome to the jungle\"\n",
     "x = txt.split(maxsplit=2)\n",
@@ -229,7 +210,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "links = ['www.youtube.com',\n",
+    "         'www.google.com',\n",
+    "         'www.programiz.com',\n",
+    "         'www.wikipedia.com']\n",
+    "domain = []\n",
+    "for i in links:\n",
+    "    domain.append('.'.join(i.split('.')[1:]))\n",
+    "\n",
+    "# The issue with lstrip\n",
+    "for link in links:\n",
+    "    print(link.lstrip('www.'))\n",
+    "\n",
+    "for link in links:\n",
+    "    print(link.lstrip('w.'))\n",
+    "\n",
+    "for link in links:\n",
+    "    print(link.removeprefix('www.'))"
+   ]
   }
  ],
  "metadata": {
