--- a/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
+++ b/Python-Coding-Challenges/01-Beginners_Level/Coding_Questions.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1: Write a Python program to check if a string is a palindrome."
+    "Question 1: Write a Python program to check if a string is a palindrome.\n",
+    "\n",
+    "A palindrome is a word, phrase, number, or sequence of characters that reads the same forward and backward (ignoring spaces, punctuation, and capitalization). Palindromes are often used as puzzles or for fun wordplay."
    ]
   },
   {
@@ -34,6 +36,21 @@
     "s = 'ccaack'\n",
     "main(s)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -186,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -255,8 +272,10 @@
      "text": [
       "[1, 2, 3, 4, 5, 6]\n",
       "[3, 5, 7, 9]\n",
+      "[3, 5]\n",
       "['this', 'this', 'n', 'that']\n",
-      "['this', 'not', 'that', 'that']\n"
+      "['this', 'not', 'that', 'that']\n",
+      "['this', 'that', 'that']\n"
      ]
     }
    ],
@@ -264,15 +283,18 @@
     "def commonElementsInLst(sampleList1,sampleList2):\n",
     "    print(sampleList1)\n",
     "    print(sampleList2)\n",
+    "    # return list(set(sampleList1) & set(sampleList2))\n",
+    "    # return [i for i in sampleList1 if i in sampleList2]\n",
+    "    return list(filter(lambda x: x in sampleList1, sampleList2))\n",
     "\n",
     "\n",
     "list1 = [1,2,3,4,5,6]\n",
     "list2 = [3,5,7,9]\n",
-    "commonElementsInLst(list1,list2)\n",
+    "print(commonElementsInLst(list1,list2))\n",
     "\n",
     "strList1 = ['this','this','n','that']\n",
     "strList2 = ['this','not','that','that']\n",
-    "commonElementsInLst(strList1,strList2)\n"
+    "print(commonElementsInLst(strList1,strList2))\n"
    ]
   },
   {
@@ -806,6 +828,73 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'BANC'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "def minWindow(s: str, t: str) -> str:\n",
+    "    if not s or not t:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    # Dictionary to keep the count of all characters in t\n",
+    "    t_counts = defaultdict(int)\n",
+    "    for char in t:\n",
+    "        t_counts[char] += 1\n",
+    "    \n",
+    "    required = len(t_counts)  # Number of unique characters in t\n",
+    "    formed = 0                # Number of unique characters formed in the current window\n",
+    "    \n",
+    "    window_counts = defaultdict(int)  # Count of characters in the current window\n",
+    "    ans = (float('inf'), 0, 0)        # Tuple to store the result (length, left, right)\n",
+    "    \n",
+    "    left, right = 0, 0\n",
+    "    while right < len(s):\n",
+    "        char = s[right]\n",
+    "        if char in t_counts:\n",
+    "            window_counts[char] += 1\n",
+    "            # Check if the current character's count matches the required count\n",
+    "            if window_counts[char] == t_counts[char]:\n",
+    "                formed += 1\n",
+    "        \n",
+    "        # Try to contract the window as much as possible until it ceases to be 'valid'\n",
+    "        while left <= right and formed == required:\n",
+    "            current_window_length = right - left + 1\n",
+    "            # Update the result if the current window is smaller\n",
+    "            if current_window_length < ans[0]:\n",
+    "                ans = (current_window_length, left, right)\n",
+    "            \n",
+    "            # Move the left pointer to try for a smaller window\n",
+    "            left_char = s[left]\n",
+    "            if left_char in t_counts:\n",
+    "                # If removing this character makes the window invalid, decrement formed\n",
+    "                if window_counts[left_char] == t_counts[left_char]:\n",
+    "                    formed -= 1\n",
+    "                window_counts[left_char] -= 1\n",
+    "            left += 1\n",
+    "        \n",
+    "        # Expand the window by moving the right pointer\n",
+    "        right += 1\n",
+    "    \n",
+    "    return s[ans[1]: ans[2] + 1] if ans[0] != float('inf') else \"\"\n",
+    "\n",
+    "minWindow(s=\"ADOBECODEBANC\", t=\"ABC\")"
    ]
   },
   {
