--- a/Python_Code_Snippets/Decorators.ipynb
+++ b/Python_Code_Snippets/Decorators.ipynb
@@ -188,9 +188,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Started\n",
+      "100\n",
+      "Ended\n"
+     ]
+    }
+   ],
    "source": [
     "def fun1(func):\n",
     "    def wrapper(*args,**kwargs):\n",
@@ -214,9 +224,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before\n",
+      "run\n",
+      "After\n"
+     ]
+    }
+   ],
    "source": [
     "# Example 1\n",
     "def before_after(func):\n",
@@ -237,14 +257,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Function run took: 2.008392333984375 Seconds\n"
+      "The Function run took: 2.0118401050567627 Seconds\n"
      ]
     }
    ],
@@ -439,9 +459,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded successfully\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "import time\n",
@@ -471,10 +499,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memory usage: 19.7MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psutil\n",
+    "print(f\"Memory usage: {psutil.Process().memory_info().rss/1024**2:.1f}MB\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "start_time = time.time()\n",
+    "# ... export code ...\n",
+    "print(f\"Data exported at {args['record_count']/(time.time()-start_time):.1f} rows/second\")"
+   ]
   }
  ],
  "metadata": {
