--- a/Python_Essentials/Python_Modules/requests_module.ipynb
+++ b/Python_Essentials/Python_Modules/requests_module.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "{'type': 'programming', 'setup': 'How do you check if a webpage is HTML5?', 'punchline': 'Try it out on Internet Explorer', 'id': 55}\n",
+      "How do you check if a webpage is HTML5?\n",
+      "Try it out on Internet Explorer\n",
       "200\n"
      ]
     }
@@ -27,6 +30,9 @@
     "\n",
     "resp = requests.get(url=url)\n",
     "data = resp.json()\n",
+    "print(data)\n",
+    "print(data.get('setup'))\n",
+    "print(data.get('punchline'))\n",
     "status_code = resp.status_code\n",
     "print(status_code)"
    ]
