--- a/Python_Essentials/01_basics/03_strings.ipynb
+++ b/Python_Essentials/01_basics/03_strings.ipynb
@@ -55,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repr:  'foo'\n",
+      "str:  foo\n"
+     ]
+    }
+   ],
    "source": [
     "var = 'foo'\n",
     "print('repr: ',repr(var)) #  the repr() function returns \"'foo'\", 'foo' inside double-quotes.\n",
@@ -73,9 +82,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Learn Python\n",
+      "love xov\n"
+     ]
+    }
+   ],
    "source": [
     "message = '     Learn Python  '\n",
     "print(message.strip())\n",
@@ -247,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
