--- a/Python_Essentials/01_basics/03_strings.ipynb
+++ b/Python_Essentials/01_basics/03_strings.ipynb
@@ -47,6 +47,113 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'Codementor'\n",
+    "print(s[0])\n",
+    "print(s[1])\n",
+    "print(s[2])\n",
+    "print(s[3])\n",
+    "print(s[4])\n",
+    "print(s[5])\n",
+    "print(s[6])\n",
+    "print(s[7])\n",
+    "print(s[8])\n",
+    "print(s[9])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'Codementor'\n",
+    "print(s[-10])\n",
+    "print(s[-9])\n",
+    "print(s[-8])\n",
+    "print(s[-7])\n",
+    "print(s[-6])\n",
+    "print(s[-5])\n",
+    "print(s[-4])\n",
+    "print(s[-3])\n",
+    "print(s[-2])\n",
+    "print(s[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = 'Codementor'\n",
+    "print(s[:])\n",
+    "print(s[:5])\n",
+    "print(s[2:6])\n",
+    "print(s[:-1])\n",
+    "print(s[:-5])\n",
+    "print(s[-1:])\n",
+    "print(s[-5:])\n",
+    "print(s[::6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"codementor speeds up your python learning process\"\n",
+    "x = s.capitalize() # capitalize() string method is used when you want to `capitalize` the first character of a string of text.\n",
+    "print (x)\n",
+    "\n",
+    "y = s.lower()\n",
+    "print(y)\n",
+    "\n",
+    "y = s.upper()\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PartyGuests = (\"Anna\", \"Allie\", \"Joy\", \"Chloe\", \"Ellyn\")\n",
+    "x = \", \".join(PartyGuests) # The .join() method can concatenate list elements into a single string based on a delimiter you define.\n",
+    "print(x, type(x))\n",
+    "\n",
+    "txt = \"Find Python Help on Codementor Today\"\n",
+    "x = txt.split()\n",
+    "print(x)\n",
+    "\n",
+    "txt = \"best#way#to#learn#python#is#to#find#a#mentor\"\n",
+    "x = txt.split(\"#\")\n",
+    "print(x)\n",
+    "\n",
+    "x = txt.split(\"#\",5)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "txt = \"Codementore\"\n",
+    "x = txt.find(\"e\",4)\n",
+    "x = txt.find(\"e\",6)\n",
+    "x = txt.find(\"e\", 4, 8)\n",
+    "print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -55,18 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "repr:  'foo'\n",
-      "str:  foo\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var = 'foo'\n",
     "print('repr: ',repr(var)) #  the repr() function returns \"'foo'\", 'foo' inside double-quotes.\n",
@@ -82,18 +180,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Learn Python\n",
-      "love xov\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "message = '     Learn Python  '\n",
     "print(message.strip())\n",
